chores: correct domain name

--- a/nginx/conf.d/jenkins.phatngocanh.xyz.conf
+++ b/nginx/conf.d/jenkins.phatngocanh.xyz.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name jenkins.pna.xyz;
+    server_name jenkins.phatngocanh.xyz;
 
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
