--- a/nginx/conf.d/jenkins.phatngocanh.xyz.conf
+++ b/nginx/conf.d/jenkins.phatngocanh.xyz.conf
@@ -1,13 +1,35 @@
+# HTTP to HTTPS redirect
 server {
     listen 80;
     server_name jenkins.phatngocanh.xyz;
+    
+    # Redirect all HTTP traffic to HTTPS
+    return 301 https://$server_name$request_uri;
+}
 
+# HTTPS server
+server {
+    listen 443 ssl http2;
+    server_name jenkins.phatngocanh.xyz;
+
+    # SSL Configuration for Cloudflare Wildcard Certificate
+    ssl_certificate /etc/nginx/ssl/wildcard.phatngocanh.xyz.crt;
+    ssl_certificate_key /etc/nginx/ssl/wildcard.phatngocanh.xyz.key;
+    
+    # SSL Security Settings
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384;
+    ssl_prefer_server_ciphers off;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+    
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
-    add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+    add_header Content-Security-Policy "default-src 'self' https: data: blob: 'unsafe-inline'" always;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     # Proxy settings - using host.docker.internal to access Jenkins
     location / {
