--- a/nginx/conf.d/db.phatngocanh.xyz.conf
+++ b/nginx/conf.d/db.phatngocanh.xyz.conf
@@ -1,7 +1,7 @@
 # HTTP to HTTPS redirect
 server {
     listen 80;
-    server_name database.phatngocanh.xyz;
+    server_name db.phatngocanh.xyz;
     
     # Redirect all HTTP traffic to HTTPS
     return 301 https://$server_name$request_uri;
@@ -10,7 +10,7 @@ server {
 # HTTPS server for web interface
 server {
     listen 443 ssl http2;
-    server_name database.phatngocanh.xyz;
+    server_name db.phatngocanh.xyz;
 
     # SSL Configuration for Cloudflare Wildcard Certificate
     ssl_certificate /etc/nginx/ssl/wildcard.phatngocanh.xyz.crt;
@@ -32,7 +32,7 @@ server {
 
     # Database status page
     location / {
-        return 200 "Database server is running on database.phatngocanh.xyz\nConnect via MySQL client on port 3307\nDirect connection without Cloudflare proxy\n";
+        return 200 "Database server is running on db.phatngocanh.xyz\nConnect via MySQL client on port 3307\nDirect connection without Cloudflare proxy\n";
         add_header Content-Type text/plain;
     }
 
