--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,6 +7,22 @@ events {
     worker_connections 1024;
 }
 
+# Stream module for TCP proxying (MySQL)
+stream {
+    upstream mysql_backend {
+        server host.docker.internal:3306;
+    }
+
+    server {
+        listen 3307;
+        proxy_pass mysql_backend;
+        proxy_connect_timeout 10s;
+        proxy_timeout 3000;
+        proxy_responses 0;
+        proxy_buffer_size 16k;
+    }
+}
+
 http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
