--- a/jenkins/docker-compose.yaml
+++ b/jenkins/docker-compose.yaml
@@ -12,6 +12,15 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - jenkins_home:/var/jenkins_home
     restart: unless-stopped
+    environment:
+      - DOCKER_HOST=unix:///var/run/docker.sock
+    command: >
+      sh -c "
+        apt-get update &&
+        apt-get install -y docker.io &&
+        usermod -aG docker jenkins &&
+        su jenkins -c '/usr/local/bin/jenkins.sh'
+      "
 
 volumes:
   jenkins_home:
