--- a/nginx/conf.d/bichngoc-be.phatngocanh.xyz.conf
+++ b/nginx/conf.d/bichngoc-be.phatngocanh.xyz.conf
@@ -1,7 +1,7 @@
 # HTTP to HTTPS redirect
 server {
     listen 80;
-    server_name bichngoc.phatngocanh.xyz;
+    server_name bichngoc-be.phatngocanh.xyz;
     
     # Redirect all HTTP traffic to HTTPS
     return 301 https://$server_name$request_uri;
@@ -10,7 +10,7 @@ server {
 # HTTPS server
 server {
     listen 443 ssl http2;
-    server_name bichngoc.phatngocanh.xyz;
+    server_name bichngoc-be.phatngocanh.xyz;
 
     # SSL Configuration for Cloudflare Wildcard Certificate
     ssl_certificate /etc/nginx/ssl/wildcard.phatngocanh.xyz.crt;
@@ -31,22 +31,17 @@ server {
     add_header Content-Security-Policy "default-src 'self' https: data: blob: 'unsafe-inline'" always;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-    # Proxy settings - using host.docker.internal to access bichngoc frontend
+    # Proxy settings - using host.docker.internal to access bichngoc-be
     location / {
-        proxy_pass http://host.docker.internal:3000;
+        proxy_pass http://host.docker.internal:9090;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # Additional headers for frontend services
+        # Additional headers for API services
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Server $host;
-        
-        # WebSocket support for frontend applications
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
         
         # Timeouts
         proxy_connect_timeout 60s;
