install mysql to jenkins

--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -2,14 +2,17 @@ FROM jenkins/jenkins:lts
 
 USER root
 
-# Install Docker CLI
+# Install Docker CLI and MySQL client tools
 RUN apt-get update && \
     apt-get install -y \
         apt-transport-https \
         ca-certificates \
         curl \
         gnupg \
-        lsb-release && \
+        lsb-release \
+        default-mysql-client \
+        python3 \
+        python3-pip && \
     curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg && \
     echo \
         "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/debian \
