--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,23 +1,27 @@
-# Default server block for unmatched domains
+# Default server block for unmatched domains and Let's Encrypt challenges
 server {
     listen 80 default_server;
     server_name _;
     
-    # Return 404 for unmatched domains
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    # Redirect all HTTP traffic to HTTPS
     location / {
-        return 404 "Domain not found\n";
-        add_header Content-Type text/plain;
+        return 301 https://$host$request_uri;
     }
 }
 
 # Default HTTPS server block for unmatched SSL domains
 server {
-    listen 443 ssl http2 default_server;
+    listen 443 ssl default_server;
+    http2 on;
     server_name _;
 
-    # SSL Configuration for Cloudflare Wildcard Certificate
-    ssl_certificate /etc/nginx/ssl/wildcard.phatngocanh.xyz.crt;
-    ssl_certificate_key /etc/nginx/ssl/wildcard.phatngocanh.xyz.key;
+    # SSL Configuration for Let's Encrypt
+    ssl_certificate /etc/letsencrypt/live/donhang.phatngocanh.xyz/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/donhang.phatngocanh.xyz/privkey.pem;
     
     # SSL Security Settings
     ssl_protocols TLSv1.2 TLSv1.3;
@@ -38,4 +42,4 @@ server {
         return 404 "Domain not found\n";
         add_header Content-Type text/plain;
     }
-} 
+}
