--- a/nginx/conf.d/donhang-be.phatngocanh.xyz.conf
+++ b/nginx/conf.d/donhang-be.phatngocanh.xyz.conf
@@ -1,20 +1,12 @@
-# HTTP to HTTPS redirect
-server {
-    listen 80;
-    server_name donhang-be.phatngocanh.xyz;
-    
-    # Redirect all HTTP traffic to HTTPS
-    return 301 https://$server_name$request_uri;
-}
-
 # HTTPS server
 server {
-    listen 443 ssl http2;
+    listen 443 ssl;
+    http2 on;
     server_name donhang-be.phatngocanh.xyz;
 
-    # SSL Configuration for Cloudflare Wildcard Certificate
-    ssl_certificate /etc/nginx/ssl/wildcard.phatngocanh.xyz.crt;
-    ssl_certificate_key /etc/nginx/ssl/wildcard.phatngocanh.xyz.key;
+    # SSL Configuration for Let's Encrypt
+    ssl_certificate /etc/letsencrypt/live/donhang.phatngocanh.xyz/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/donhang.phatngocanh.xyz/privkey.pem;
     
     # SSL Security Settings
     ssl_protocols TLSv1.2 TLSv1.3;
