--- a/nginx/conf.d/database.phatngocanh.xyz.conf
+++ b/nginx/conf.d/database.phatngocanh.xyz.conf
@@ -1,34 +1,7 @@
-# HTTP to HTTPS redirect
+# HTTP server for web interface
 server {
     listen 80;
     server_name database.phatngocanh.xyz;
-    
-    # Redirect all HTTP traffic to HTTPS
-    return 301 https://$server_name$request_uri;
-}
-
-# HTTPS server for web interface
-server {
-    listen 443 ssl http2;
-    server_name database.phatngocanh.xyz;
-
-    # SSL Configuration for Cloudflare Wildcard Certificate
-    ssl_certificate /etc/nginx/ssl/wildcard.phatngocanh.xyz.crt;
-    ssl_certificate_key /etc/nginx/ssl/wildcard.phatngocanh.xyz.key;
-    
-    # SSL Security Settings
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384;
-    ssl_prefer_server_ciphers off;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
-    
-    # Security headers
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header Referrer-Policy "no-referrer-when-downgrade" always;
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     # Database status page
     location / {
@@ -42,4 +15,4 @@ server {
         return 200 "healthy\n";
         add_header Content-Type text/plain;
     }
-} 
+}
